# ESP32_Weather-station

./: .gitignore  README.md  sdkconfig  sdkconfig.old
1.Hardware/V1.0.0/ESP32_project/: ESP32_Albums.SchDoc  ESP32_project.IntLib  ESP32_project.PrjPcb
1.Hardware/V1.0.0/TFT_project/: TFT.PcbDoc  TFT.SchDoc  TFT_project.PrjPcb
2.Firmware/weather_stationV1.0.0/: partitions.csv  sdkconfig  sdkconfig.old
2.Firmware/weather_stationV1.0.0/components/SD_card/: CMakeLists.txt  SD_card.c
2.Firmware/weather_stationV1.0.0/components/WS2812/: CMakeLists.txt  WS2812.c
2.Firmware/weather_stationV1.0.0/components/Wifi/: CMakeLists.txt  Wifi.c
2.Firmware/weather_stationV1.0.0/components/font/: address_font.c  myFont.c  other_font.c  weather_font40.c  weather_text_20.c
2.Firmware/weather_stationV1.0.0/components/image/: CMakeLists.txt  leisheng.c  leisheng.sjpg  linghua.c  linghua.sjpg  shengzi.c  shengzi.sjpg  tuoma.c  tuoma.sjpg  wanye.c  wanye.sjpg  wulang.c  wulang.sjpg  xiaogong.c  xiaogong.sjpg  xinghai.c  xinghai.sjpg  zhaoyou.c  zhaoyou.sjpg
2.Firmware/weather_stationV1.0.0/components/lvgl_esp32_drivers/: lvgl_helpers.c
2.Firmware/weather_stationV1.0.0/main/: CMakeLists.txt  main.c
2.Firmware/weather_stationV2.0.0/: README.md  partitions.csv  sdkconfig
2.Firmware/weather_stationV2.0.0/components/Net_mess_task/: CMakeLists.txt  network_task.c  smart_config.c  weather_json.c  wifi_nvs.c
2.Firmware/weather_stationV2.0.0/components/Net_mess_task/include/: wifi_nvs.h
2.Firmware/weather_stationV2.0.0/components/lvgl/: lv_conf.h
2.Firmware/weather_stationV2.0.0/components/lvgl_esp32_drivers/: CMakeLists.txt
2.Firmware/weather_stationV2.0.0/main/: CMakeLists.txt  app_main.h
2.Firmware/weather_stationV2.1.0/: sdkconfig  sdkconfig.old
2.Firmware/weather_stationV2.1.0/components/Net_mess_task/: CMakeLists.txt  dns_server.c  index.html  network_task.c  web_server.c  wifi.html  wifi_nvs.c  wifi_softap.c  wifi_station.c
2.Firmware/weather_stationV2.1.0/components/Net_mess_task/include/: dns_server.h  web_server.h  wifi_nvs.h  wifi_softap.h  wifi_station.h
2.Firmware/weather_stationV2.1.0/main/: app_main.c
3.3D Model/V1.0.0/: 3d概念图.3MF  GB╱T 818-2016[十字槽盘头螺钉M2×3].sldprt  TFT.SLDPRT  m2铜柱.SLDPRT  分光棱镜.SLDPRT  屏幕草图.DWG  屏幕草图.SLDPRT  底板.SLDPRT  底板切割.DWG  底板切割.DXF  底板切割.SLDPRT
3.3D Model/V2.0.0/: 底座.stl  犀牛部分指令.txt
4.Software/VScode/: CMakeLists.txt  lv_conf.h  lv_drv_conf.h  lv_ex_conf.h
4.Software/VScode/image/: Sunny.c
4.Software/VScode/main/src/: main.c
components/Net_mess_task/: CMakeLists.txt  network_task.c  smart_config.c  weather_json.c
components/Net_mess_task/include/: network_task.h  smart_config.h  weather_json.h
components/led_task/: led_task.c
components/lv_examples/: lv_ex_conf.h
components/lvgl/: lv_conf.h
components/my_font/: my_font_30.c  my_font_70.c
components/smart_config/: CMakeLists.txt
components/task_config/: CMakeLists.txt  task_config.c  task_config.h
components/task_define/: CMakeLists.txt  task_define.c  task_define.h
components/ui_main/: CMakeLists.txt  ui_main.c  ui_main.h
components/ui_task/: CMakeLists.txt  ui_load.c  ui_load.h  ui_main.c  ui_task.c
components/ui_task/include/: ui_load.h  ui_main.h  ui_task.h
components/wifi_nvs/: CMakeLists.txt
main/: CMakeLists.txt  app_main.c
(+21 files in other folders)
